--- a/app/src/main/res/layout/ac_main.xml
+++ b/app/src/main/res/layout/ac_main.xml
@@ -17,8 +17,15 @@
         android:id="@+id/navHost"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         app:defaultNavHost="true"
         app:navGraph="@navigation/main_nav" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSwitchFrag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
